--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.7",
+    "@clerk/themes": "^2.1.25",
     "@uploadthing/react": "^6.7.2",
     "mongoose": "^8.6.0",
     "next": "14.2.7",
