--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.7",
     "@clerk/themes": "^2.1.25",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@uploadthing/react": "^6.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.438.0",
     "mongoose": "^8.6.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "svix": "^1.31.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.13.2"
+    "uploadthing": "^6.13.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
